# packageinstaller

./: CMakeLists.txt  README.md  cachyospi_locale.qrc  pkglist.yaml
backend-rustlib/: Cargo.toml  build.rs
backend-rustlib/src/: lib.rs  pacman_cache.rs
cmake/: StandardProjectSettings.cmake
lang/: cachyos-packageinstaller_ca.ts  cachyos-packageinstaller_cs.ts  cachyos-packageinstaller_de.ts  cachyos-packageinstaller_pl.ts  cachyos-packageinstaller_ru.ts  cachyos-packageinstaller_sk.ts
src/: alpm_helper.cpp  alpm_manager.cpp  alpm_manager.hpp  cmd.cpp  ini.hpp  logging_utils.cpp  logging_utils.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  pacmancache.cpp  pacmancache.hpp  remotes.cpp  remotes.hpp  utils.cpp  utils.hpp  versionnumber.hpp
