[package]
name = "backend-rustlib"
version = "0.1.0"
build = "build.rs"
authors = ["Vladislav Nepogodin <nepogodin.vlad@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "1", default-features = false, features = ["std"] }
cxx = { version = "1", default-features = false, features = ["std"] }
alpm = { default-features = false, version = "4" }
alpm-utils = { features = ["conf"], default-features = false, version = "4" }
pacmanconf = "3"

[build-dependencies]
cxx-build = "1"

[lib]
crate-type = ["staticlib"]

[profile.release]
strip = "symbols"
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
